cabal-version:      3.4
name:               xml-conduit-css
version:            0.1.0.0
synopsis:           css selectors for xml-conduit
-- description:
homepage:           https://github.com/lambdamechanic/xml-conduit-css
license:            MIT
license-file:       LICENSE
author:             Mark Wotton
maintainer:         mwotton@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite xml-conduit-css-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        xml-conduit-css
